# black_scholes_rust

./: .travis.yml  CONTRIBUTING.md  Cargo.toml  README.md  build.rs  cobertura.xml
.github/workflows/: rust.yml  test.yml
benches/: benches.rs  black_scholes_benches.rs
call price/base/: benchmark.json  estimates.json  raw.csv  sample.json
call price/new/: tukey.json
call price/report/: index.html
dev/bench/: data.js
examples/: profile.rs
letsberational/: CMakeLists.txt  COPYRIGHT.txt  version.h
report/: index.html
src/: lib.rs
