[package]
name = "black_scholes"
version = "0.7.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/danielhstahl/black_scholes_rust"
repository = "https://github.com/danielhstahl/black_scholes_rust"
readme = "README.md"
license = "MIT"
description = "A Black Scholes option pricing library."
edition = "2018"

[dependencies]
special = "0.7"
nrfind = "1.0.2"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.2.0"
rand = "0.5"

[profile.bench]
lto = true

[badges]
travis-ci = { repository = "danielhstahl/black_scholes_rust" }