[package]
name = "black_scholes"
version = "0.8.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/danielhstahl/black_scholes_rust"
repository = "https://github.com/danielhstahl/black_scholes_rust"
readme = "README.md"
license = "MIT"
description = "A Black Scholes option pricing library."
edition = "2021"

[dependencies]
special = "0.8"
nrfind = "1.0.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
rand = "0.8"

[profile.bench]
lto = true

[badges]
travis-ci = { repository = "danielhstahl/black_scholes_rust" }
