[package]
name = "black_scholes"
version = "0.11.0"
authors = ["Daniel Stahl <danstahl1138@gmail.com>"]
homepage = "https://github.com/danielhstahl/black_scholes_rust"
repository = "https://github.com/danielhstahl/black_scholes_rust"
readme = "README.md"
license = "MIT"
description = "A Black Scholes option pricing library."
edition = "2024"

[dependencies]
special = "0.11.4"
nrfind = "1.0.3"
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
approx = "0.5.1"
rand = "0.9.2"

[profile.bench]
lto = true
